fixed top cutoff

--- a/_sass/jekyll-theme-minimalist.scss
+++ b/_sass/jekyll-theme-minimalist.scss
@@ -281,9 +281,9 @@ footer {
   .circular-box img {
     position: absolute;
     border-radius: 50%;
-    top: 50%;
+    top: 40px;
     left: 50%;
-    transform: translate(-50%, -170%);
+    transform: translateX(-50%);
     width: 250px;
     height: 250px;
     object-fit: cover;
